# harbor_market

./: .env.example  .gitignore  README.md  compose.yaml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users.py  0002_add_product_catalog.py  0003_add_payment_attempts.py  0004_track_promoted_staging_keys.py
backend/app/: __init__.py  cli.py  main.py  middleware.py
backend/app/api/: __init__.py  dependencies.py  router.py
backend/app/api/routes/: __init__.py  admin_catalog.py  auth.py  catalog.py  health.py  payments.py
backend/app/core/: config.py  errors.py  rate_limit.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  category.py  import_job.py  object_cleanup_job.py  payment.py  product.py  user.py
backend/app/payments/: __init__.py  domain.py
backend/app/payments/providers/: __init__.py  (+3 more)
backend/app/schemas/: auth.py  catalog.py  object_cleanup.py  payments.py  staging.py
backend/app/services/: auth.py  catalog.py  catalog_excel.py  object_cleanup.py  object_storage.py  payments.py  product_images.py  text_validation.py
backend/tests/: conftest.py  test_auth.py  test_catalog_api.py  test_catalog_excel.py  test_catalog_schema_validation.py  test_catalog_specification_schema.py  test_health_and_contract.py  test_object_cleanup.py  test_object_storage.py  test_payment_state_machine.py  test_payments_api.py  test_postgres_catalog_concurrency.py  test_postgres_migration.py  test_postgres_payment_concurrency.py  test_security_and_rate_limit.py
(+123 files in other folders)
