[project]
name = "harbor-market-backend"
version = "0.1.0"
description = "Harbor Market authentication API"
requires-python = "==3.12.*"
dependencies = [
    "alembic==1.16.4",
    "argon2-cffi==25.1.0",
    "fastapi==0.116.1",
    "itsdangerous==2.2.0",
    "psycopg[binary]==3.2.9",
    "pydantic-settings==2.10.1",
    "sqlalchemy==2.0.41",
    "uvicorn[standard]==0.35.0",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "ruff==0.12.4",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "postgres: requires TEST_DATABASE_URL pointing to a disposable PostgreSQL database",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.coverage.run]
branch = true
source = ["app"]
